--- a/css/screen.css
+++ b/css/screen.css
@@ -4,6 +4,81 @@
     max-width: 100%;
 }
 
+.controls-container{
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+button {
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+    border: 1;
+    border-style: solid;
+    padding: 10px;
+}
+
+.btn {
+    margin-left: 5
+}
+
+.toggle {
+    background-color: white;
+    border-color: black;
+    color: black
+}
+.toggle.active{
+    background-color: black;
+    color: white
+}
+
+
+.red {
+    background-color: red;
+    border-color: red;
+    color: white
+}
+
+.red.active{
+    background-color: white;
+    color: red
+}
+
+.aqua {
+    background-color: aqua;
+    border-color: aqua;
+    color: white;
+}
+
+.aqua.active{
+    background-color: white;
+    color: aqua
+}
+
+.lime {
+    background-color: lime;
+    border-color: lime;
+    color: white
+}
+
+.lime.active{
+    background-color: white;
+    color: lime
+}
+
+.fuschia {
+    background-color: fuchsia;
+    border-color: fuchsia;
+    color: white
+}
+
+.fuschia.active{
+    background-color: white;
+    color: fuchsia
+}
+
+
+
 canvas {
     display: block;
     border: 1px solid lightgray;
