--- a/css/screen.css
+++ b/css/screen.css
@@ -11,7 +11,7 @@
 }
 
 #interface input:after{
-    content: attr(data-label);
+    content: attr(data-label) ' ' attr(data-status);
     display: block;
     padding-left: 1.5rem;
 }
